--- a/popup.css
+++ b/popup.css
@@ -23,15 +23,53 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: absolute;
-  width: 60vw;
-  right: 1em;
-  top: 1em;
   padding: 1.5em;
-  border-left: 5px solid #04143a;
   color: #cfdee7;
   z-index: 6000;
   background-color: white;
   word-break: break-word;
+}
+
+.gdpr-popup-position-top{
+  right: 0;
+  left: 0;
+  top: 0;
+  border-bottom: 5px solid #04143a;
+}
+
+.gdpr-popup-position-top-right{
+  width: 60vw;
+  right: 1em;
+  top: 1em;
+  border-left: 5px solid #04143a;
+}
+
+.gdpr-popup-position-top-left{
+  width: 60vw;
+  left: 1em;
+  top: 1em;
+  border-right: 5px solid #04143a;
+}
+
+.gdpr-popup-position-bottom{
+  right: 0;
+  left: 0;
+  bottom: 0;
+  border-top: 5px solid #04143a;
+}
+
+.gdpr-popup-position-bottom-right{
+  width: 60vw;
+  right: 1em;
+  bottom: 1em;
+  border-left: 5px solid #04143a;
+}
+
+.gdpr-popup-position-bottom-left{
+  width: 60vw;
+  left: 1em;
+  bottom: 1em;
+  border-right: 5px solid #04143a;
 }
 
 .gdpr-popup-heading {
@@ -82,7 +120,7 @@
 
 
 .gdpr-popup-btn-container {
-  margin-top: 1em;
+  margin-top: 0.5em;
   margin-bottom: 0;
 }
 
@@ -146,4 +184,15 @@ table.gdpr-popup-table {
 
 table.gdpr-popup-table tr:nth-child(even) {
   background-color: #909ee014;
+}
+
+.gdpr-popup-save-pref-checkbox{
+  height: 0.7em;
+  margin: auto;
+  margin-right: 0.2em;
+}
+
+.gdpr-popup-save-pref-label{
+  font-size: 0.7em;
+  color: #324475;
 }
