--- a/popup.css
+++ b/popup.css
@@ -22,12 +22,14 @@
 .gdpr-popup-container {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  position: absolute;
+  position: fixed;
   padding: 1.5em;
   color: #cfdee7;
   z-index: 6000;
   background-color: white;
   word-break: break-word;
+  overflow-y: auto;
+  max-height: 100vh;
 }
 
 .gdpr-popup-position-top{
